Bug 72822 - LIBVA_DRIVER_NAME not used if va_GetDriverName fails (vdpau)
Summary: LIBVA_DRIVER_NAME not used if va_GetDriverName fails (vdpau)
Status: RESOLVED FIXED
Alias: None
Product: libva
Classification: Unclassified
Component: core (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: haihao
QA Contact: Sean V Kelley
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-18 05:46 UTC by Matthew Waters
Modified: 2015-11-23 15:32 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
LIBVA_DRIVER_NAME needs to be used if set at all (996 bytes, patch)
2013-12-18 05:47 UTC, Matthew Waters
Details | Splinter Review
0001-LIBVA_DRIVER_NAME-needs-to-be-used-if-set-at-all.patch (1.09 KB, patch)
2015-08-18 14:15 UTC, Philippe "RzR" Coval
Details | Splinter Review

Description Matthew Waters 2013-12-18 05:46:41 UTC
Running,

LIBVA_DRIVER_NAME=vdpau vainfo

fails due to va_GetDriverName not searching for the vdpau driver.
Comment 1 Matthew Waters 2013-12-18 05:47:42 UTC
Created attachment 90910 [details] [review]
LIBVA_DRIVER_NAME needs to be used if set at all
Comment 2 Philippe "RzR" Coval 2015-08-18 14:15:11 UTC
Created attachment 117764 [details] [review]
0001-LIBVA_DRIVER_NAME-needs-to-be-used-if-set-at-all.patch

Hi,

I confirm this v1 patch fix problem on libva-1.3.0 on my sunxi device

So, I refreshed it to make it apply on master branch (1.6.1.pre1+)

Until it's merged I can maintain it in this branch: 

https://github.com/rzr/libva/tree/for-upstream

https://github.com/gbeauchesne/libva/pull/1

Regards
Comment 3 haihao 2015-11-23 15:32:15 UTC
Applied, thanks for your patch.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.