LIBVA_DRIVER_NAME needs to be used if set at all

va_GetDriverName fails to find the vdpau driver returning
something != SUCCESS and the driver name is not used at all.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=72822
Change-Id: I29ef398bf066badedc25de10873975ad0479dccf
Signed-off-by: Philippe Coval <rzr@gna.org>